# ox

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SPEC.md  mkdocs.yml  pyproject.toml  settings.json
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  cli-reference.md  editor-support.md  future.md  getting-started.md  plugins.md
editors/vscode/: extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: ox.tmLanguage.json
editors/vscode/themes/: ox-dark.json
example/: example.ox
examples/: advanced.ox  example.ox  plugin_template.py
examples/plugins/: wendler531.py
src/ox/: cli.py  data.py  db.py  lint.py  lsp.py  parse.py  plot.py  plugins.py  reports.py  sql_utils.py
src/ox/builtins/: e1rm.py  history.py  srpe.py  stats.py  volume.py  weighin.py  wendler531.py
tests/: README.md  __init__.py  conftest.py  test_data.py  test_db.py  test_integration.py  test_lint.py  test_lsp.py  test_notes.py  test_parse.py  test_plot.py  test_plugins.py  test_reports.py  test_srpe.py  test_weighin.py  test_wendler531.py
tree-sitter-ox/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  _index.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-ox/bindings/c/: tree-sitter-ox.pc.in
tree-sitter-ox/bindings/go/: binding.go  binding_test.go
tree-sitter-ox/bindings/node/: binding.cc  index.js
tree-sitter-ox/bindings/python/tests/: test_binding.py
tree-sitter-ox/bindings/python/tree_sitter_ox/: __init__.py  binding.c
tree-sitter-ox/bindings/rust/: build.rs  lib.rs
tree-sitter-ox/bindings/swift/TreeSitterOx/: ox.h
tree-sitter-ox/bindings/swift/TreeSitterOxTests/: TreeSitterOxTests.swift
tree-sitter-ox/src/: grammar.json  node-types.json  parser.c
tree-sitter-ox/test/corpus/: comments.txt  exercise_block.txt  include_directive.txt  movement_block.txt  multiline_entry.txt  singleline_entry_movement.txt  singleline_entry_weighin.txt  template_block.txt
